# Cap

./: .gitignore  AGENTS.md  Cargo.toml  FORK.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: app.config.ts  package.json
apps/desktop/scripts/: prepare.js
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.attach.conf.json  tauri.conf.json
apps/desktop/src/routes/editor/: ConfigSidebar.tsx  Editor.tsx  editor-skeleton.tsx  projectConfig.ts
apps/desktop/src/routes/editor/Timeline/: TrackManager.tsx  ZoomTrack.tsx
apps/desktop/src/routes/screenshot-editor/: context.tsx
apps/desktop/src/shims/: debug-browser.ts  extend.ts
apps/desktop/src/utils/: tauri.ts
crates/capture/camera/: Cargo.toml
crates/capture/camera-avfoundation/: Cargo.toml
crates/capture/camera-directshow/: Cargo.toml
crates/capture/camera-ffmpeg/: Cargo.toml
crates/capture/camera-mediafoundation/: Cargo.toml
crates/capture/camera-windows/: Cargo.toml
crates/capture/cursor-capture/: Cargo.toml
crates/capture/cursor-info/: Cargo.toml
crates/capture/cursor-info/src/: lib.rs  macos.rs  windows.rs
crates/capture/screen-audio/: Cargo.toml
crates/capture/screen-capturekit/: Cargo.toml
crates/capture/screen-direct3d/: Cargo.toml
crates/capture/screen-ffmpeg/: Cargo.toml
crates/capture/screen-targets/: Cargo.toml
crates/core/api/: Cargo.toml
crates/core/audio/: Cargo.toml
crates/core/fail/: Cargo.toml
crates/core/flags/: Cargo.toml
crates/core/project/: Cargo.toml
crates/core/project/src/: configuration.rs  meta.rs
crates/core/timestamp/: Cargo.toml
crates/core/utils/: Cargo.toml
crates/core/workspace-hack/: Cargo.toml
crates/dev/desktop-test-harness/: Cargo.toml
crates/dev/desktop-test-harness/src/: main.rs
crates/media/cpal-ffmpeg/: Cargo.toml
crates/media/ffmpeg-hw-device/: Cargo.toml
crates/media/frame-converter/: Cargo.toml
crates/media/gpu-converters/: Cargo.toml
crates/media/media/: Cargo.toml
crates/media/media-info/: Cargo.toml
crates/media/video-decode/: Cargo.toml
crates/media/windows-mediafoundation-ffmpeg/: Cargo.toml
crates/media/windows-mediafoundation-utils/: Cargo.toml
crates/render/editor/: Cargo.toml  PLAYBACK-FINDINGS.md
crates/render/editor/src/: editor_instance.rs  playback.rs
crates/render/encoder-avfoundation/: Cargo.toml
crates/render/encoder-ffmpeg/: Cargo.toml
crates/render/encoder-gif/: Cargo.toml
crates/render/encoder-mediafoundation/: Cargo.toml
crates/render/export/: Cargo.toml  EXPORT-FINDINGS.md
crates/render/recording/: Cargo.toml  FINDINGS.md
crates/render/rendering/: Cargo.toml
crates/render/rendering-skia/: Cargo.toml
crates/render/rendering/src/: cursor_interpolation.rs  lib.rs  zoom.rs  zoom_focus_interpolation.rs
crates/render/rendering/src/decoder/: media_foundation.rs
crates/render/rendering/src/layers/: cursor.rs
crates/render/rendering/src/shaders/: composite-video-frame.wgsl  cursor.wgsl
tooling/.cargo/: config.toml
tooling/desktop/: setup.js
