[package]
name = "cap-capture-camera-avfoundation"
version = "0.1.0"
edition = "2024"
license = "MIT"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
inquire = "0.7.5"

[dependencies]
tracing.workspace = true
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../../core/workspace-hack" }
