[package]
name = "cap-capture-screen-ffmpeg"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ffmpeg = { workspace = true }
cpal = { workspace = true }
scap-cpal = { package = "cap-capture-screen-audio", optional = true, path = "../screen-audio" }
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../../core/workspace-hack" }

[target.'cfg(windows)'.dependencies]
scap-direct3d = { package = "cap-capture-screen-direct3d", path = "../screen-direct3d" }
windows = { workspace = true, features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
scap-screencapturekit = { package = "cap-capture-screen-capturekit", path = "../screen-capturekit" }
cidre = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }
scap-targets = { package = "cap-capture-screen-targets", path = "../screen-targets" }

[lints]
workspace = true
