[package]
name = "cap-core-project"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cap-cursor-info = { package = "cap-capture-cursor-info", path = "../../capture/cursor-info" }

specta.workspace = true
serde = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }

serde_json = "1.0.127"
either = "1.13.0"
relative-path = { version = "1.9.3", features = ["serde"] }
log = "0.4"
tracing = "0.1.41"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"]}
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../workspace-hack" }
