[package]
name = "cap-render-encoder-avfoundation"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-media-info = { package = "cap-media-info", path = "../../media/media-info" }

ffmpeg.workspace = true
thiserror.workspace = true
tracing.workspace = true
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../../core/workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
