[package]
name = "cap-render-encoder-gif"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
gifski = "1.32"
imgref = "1.10"
rgb = "0.8"
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../../core/workspace-hack" }

[lints]
workspace = true
