[package]
name = "cap-render-export"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-utils = { package = "cap-core-utils", path = "../../core/utils" }
cap-project = { package = "cap-core-project", path = "../../core/project" }
cap-rendering = { package = "cap-render-pipeline", path = "../rendering" }
cap-editor = { package = "cap-render-editor", path = "../editor" }
cap-media = { package = "cap-media-pipeline", path = "../../media/media" }
cap-flags = { package = "cap-core-flags", path = "../../core/flags" }
cap-enc-ffmpeg = { package = "cap-render-encoder-ffmpeg", path = "../encoder-ffmpeg" }
cap-enc-gif = { package = "cap-render-encoder-gif", path = "../encoder-gif" }
cap-media-info = { package = "cap-media-info", path = "../../media/media-info" }

tokio.workspace = true
tempfile = "3.12.0"
image = "0.25.2"
mp4 = "0.14.0"
thiserror.workspace = true
futures = { workspace = true }
ffmpeg = { workspace = true }
serde = { workspace = true }
specta.workspace = true
serde_json = "1.0.140"
tracing.workspace = true
gifski = "1.32"
imgref = "1.10"
rgb = "0.8"
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../../core/workspace-hack" }

[dev-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
chrono = "0.4"
directories = "6.0.0"
inquire = "0.7.5"
tokio.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
