[package]
name = "cap-render-recording"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []
test-utils = []

[dependencies]
cap-audio = { package = "cap-core-audio", path = "../../core/audio" }
cap-fail = { package = "cap-core-fail", path = "../../core/fail" }
cap-project = { package = "cap-core-project", path = "../../core/project" }
cap-media = { package = "cap-media-pipeline", path = "../../media/media" }
cap-rendering = { package = "cap-render-pipeline", path = "../rendering" }
cap-flags = { package = "cap-core-flags", path = "../../core/flags" }
cap-utils = { package = "cap-core-utils", path = "../../core/utils" }
scap-targets = { package = "cap-capture-screen-targets", path = "../../capture/screen-targets" }
cap-cursor-capture = { package = "cap-capture-cursor-capture", path = "../../capture/cursor-capture" }
cap-media-info = { package = "cap-media-info", path = "../../media/media-info" }
cap-cursor-info = { package = "cap-capture-cursor-info", path = "../../capture/cursor-info" }
cap-camera = { package = "cap-capture-camera", path = "../../capture/camera", features = ["serde", "specta"] }
cap-camera-ffmpeg = { package = "cap-capture-camera-ffmpeg", path = "../../capture/camera-ffmpeg" }
cap-enc-ffmpeg = { package = "cap-render-encoder-ffmpeg", path = "../encoder-ffmpeg" }
cap-frame-converter = { package = "cap-media-frame-converter", path = "../../media/frame-converter" }
cap-timestamp = { package = "cap-core-timestamp", path = "../../core/timestamp" }
scap-ffmpeg = { package = "cap-capture-screen-ffmpeg", path = "../../capture/screen-ffmpeg" }

specta = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
thiserror = { workspace = true }
ffmpeg = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

serde_json = "1"
chrono = "0.4.38"
tracing.workspace = true
device_query = "4.0.1"
image = "0.25.2"
either = "1.13.0"
tracing-subscriber = { version = "0.3.19" }
relative-path = "1.9.3"
tokio-util = "0.7.15"
sha2 = "0.10.9"
hex = "0.4.3"
ringbuf = "0.4.8"
cpal.workspace = true
indexmap = "2.10.0"
kameo = "0.17.2"
inquire = "0.7.5"
replace_with = "0.1.8"
retry = "2.1.0"
sysinfo = "0.35"
workspace-hack = { package = "cap-core-workspace-hack", version = "0.1", path = "../../core/workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }
screencapturekit = "0.3.5"
cocoa = "0.26.0"
objc = "0.2.7"
objc2 = "0.6"
objc2-app-kit = "0.3.1"
core-graphics = "0.24.0"
core-foundation = "0.10.0"
foreign-types-shared = "0.3"
libc = "0.2"

scap-screencapturekit = { package = "cap-capture-screen-capturekit", path = "../../capture/screen-capturekit" }
cap-enc-avfoundation = { package = "cap-render-encoder-avfoundation", path = "../encoder-avfoundation" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
    "Win32_Storage_Xps",
] }

cap-enc-mediafoundation = { package = "cap-render-encoder-mediafoundation", path = "../encoder-mediafoundation" }
cap-mediafoundation-ffmpeg = { package = "cap-media-windows-mediafoundation-ffmpeg", path = "../../media/windows-mediafoundation-ffmpeg" }
cap-mediafoundation-utils = { package = "cap-media-windows-mediafoundation-utils", path = "../../media/windows-mediafoundation-utils" }
cap-camera-windows = { package = "cap-capture-camera-windows", path = "../../capture/camera-windows" }
scap-direct3d = { package = "cap-capture-screen-direct3d", path = "../../capture/screen-direct3d" }
scap-cpal = { package = "cap-capture-screen-audio", path = "../../capture/screen-audio" }

[dev-dependencies]
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { workspace = true, features = ["Win32_UI_HiDpi"] }

[[test]]
name = "synthetic_recording"
required-features = ["test-utils"]

[[example]]
name = "synthetic-test-runner"
required-features = ["test-utils"]

[[example]]
name = "playback-test-runner"

[[example]]
name = "real-device-test-runner"
